# vsf-all-in-one

source/shell/sys/espidf/: CMakeLists.txt  README.md  vsf_espidf.c  vsf_espidf.h  vsf_espidf_cfg.h
source/shell/sys/espidf/include/: README.md  esp_err.h  esp_event.h  esp_event_base.h  esp_flash.h  esp_heap_caps.h  esp_littlefs.h  esp_log.h  esp_partition.h  esp_ringbuf.h  esp_system.h  esp_timer.h  esp_vfs.h  esp_vfs_fat.h  nvs.h  nvs_flash.h
source/shell/sys/espidf/include/driver/: adc_oneshot.h  adc_types.h  gpio.h  gptimer.h  i2c_master.h  i2c_types.h  ledc.h  spi_master.h  uart.h
source/shell/sys/espidf/port/: CMakeLists.txt  driver_adc_port.c  driver_gpio_port.c  driver_gptimer_port.c  driver_i2c_port.c  driver_ledc_port.c  driver_spi_master_port.c  driver_uart_port.c  esp_err_port.c  esp_event_port.c  esp_flash_port.c  esp_heap_caps_port.c  esp_littlefs_port.c  esp_log_port.c  esp_partition_port.c  esp_ringbuf_port.c  esp_system_port.c  esp_timer_port.c  esp_vfs_fat_port.c  esp_vfs_port.c  nvs_flash_port.c
source/shell/sys/freertos/: CMakeLists.txt  vsf_freertos.c  vsf_freertos.h  vsf_freertos_cfg.h
source/shell/sys/freertos/include/: FreeRTOS.h  event_groups.h  message_buffer.h  portable.h  portmacro.h  queue.h  semphr.h  stream_buffer.h  task.h  timers.h
source/shell/sys/freertos/include/freertos/: FreeRTOS.h  portable.h  portmacro.h  queue.h  (+1 more)
source/shell/sys/freertos/port/: CMakeLists.txt  freertos_critical_port.c  freertos_event_groups_port.c  freertos_heap_port.c  freertos_notify_port.c  freertos_queue_port.c  freertos_semphr_port.c  freertos_stream_buffer_port.c  freertos_task_port.c  freertos_timers_port.c
(+23 files in other folders)
